--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "rxjs": "~6.5.4",
+    "sass-loader": "^8.0.2",
+    "sweetalert2": "^7.33.1",
     "tslib": "^1.10.0",
+    "webpack-subresource-integrity": "^1.4.0",
+    "ws": "^7.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
